force-app/main/default/objects/CustomLogEvent__e/CustomLogEvent__e.object-meta.xml
<CustomObject>
    <description>this event is published in apex code when we want to log an error to the CustomLog__c object, and still throw the error.</description>
    <label>Custom Log Event</label>
    <pluralLabel>Custom Log Events</pluralLabel>
</CustomObject>