force-app/main/default/objects/CustomLogEvent__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>LogLevel</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>