force-app/main/default/objects/CustomLogEvent__e/fields/Occured__c.field-meta.xml
<CustomField>
    <fullName>Occured__c</fullName>
    <label>Occured</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>