force-app/main/default/objects/CustomLogEvent__e/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t delete this record in scheduled log deletion</description>
    <label>Save</label>
    <type>Checkbox</type>
</CustomField>